--- a/tabby-tales/src/app/splash-container/splash-container.component.scss
+++ b/tabby-tales/src/app/splash-container/splash-container.component.scss
@@ -40,5 +40,5 @@
 }
 
 .carousel-indicators button {
-  background-color: white; /* Makes the button background white */
+  background-color: white;
 }
